2017-09-18  David Hohn  <david.hohn@cern.ch>
    * Add Support for drawing sum of prefit bkg on postfit plots

2017-09-14 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing Systematic option ScaleUp/Down, so that one can specify different scaling for each region, and the scaling is re/un-done in the b step
    
2017-09-13 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixes TTHFITTER-152
    
2017-09-07 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed runAsymptoticCLs accoding to TTHFITTER-117
    * Fixed chi2 computation in case of constant norm factors, according to TTHFITTER-153
    
2017-08-16 Michele Pinamonti <michele.pinamonti@gmail.com>
    * MultiFit fFastFitForRanking bug fixed (it was set to true, no way to change it from the multi-fit config)
    
2017-07-26 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing error propagation when dividing samples
    * Fixes TTHFITTER-149
    * added signal injection option in MultiFit (for limit)
    
2017-07-17 Michele Pinamonti <michele.pinamonti@gmail.com>
    * stat-only option for chi2
    
2017-07-05 Michele Pinamonti <michele.pinamonti@gmail.com>
    * merge with FixNP by Roger (fixes TTHFITTER-141)
    * fix bug blinding in summary plots
    
2017-07-03 Michele Pinamonti <michele.pinamonti@gmail.com>
    * RooStats::UseNLLOffset(true) added (as per e-mail reommending it)
    * Add NtupleNamesUp/Down and NtuplePathsUp/Down options for systematics in config
    * Fixes TTHFITTER-136 (proper usage of OutDir by significance evaluation and multi-fit limit comparison)
    * adding option to print chi2 and prob on the plots
    * Fix bug for on bind bliding propagation (to chi2 and post-fit plots)
    
2017-06-30 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Working on TTHFITTER-137, extended chi2 test for pre-/post-fit plots added
    
2017-06-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * MergeSystematics moved before syst symmetrisation